# reading_lab

./: .autocorrectrc  .gitignore  .gitmodules  Manifest.toml  Project.toml  README.md  _quarto-html.yml  pyproject.toml
.github/workflows/: quarto-pages.yml
.zed/: settings.json
books/8小时带你快速入门Go语言/book/: _quarto.yml  index.qmd
books/8小时带你快速入门Go语言/book/appendices/: 10.md  11.md  12.md  13.md  14.md  15.go  15.md  7.md  8.md  9.md
books/8小时带你快速入门Go语言/book/chapters/: 10.md  11.md  12.md  13.md  14.md  15.md  7.md  8.md  9.md
books/Rust编程语言入门教程（Rust语言Rust权威指南配套）/book/: _quarto.yml  index.qmd
books/Rust编程语言入门教程（Rust语言Rust权威指南配套）/book/appendices/: 3.md  4.md  5.md  6.md
books/assets/: main-header.html  main.css  reading_lab_display.py
books/《概率论与数理统计》教学视频 2.0版本【宋浩老师】/book/: _quarto.yml
books/《概率论与数理统计》教学视频2.0版本【宋浩老师】/book/: _quarto.yml
books/【无废话30分钟】Lua快速入门教程 - 4K超清/book/: _quarto.yml  index.qmd
books/心理测量学 第3版（Furr）/book/: _quarto.yml
books/数理统计学导论/book/: _quarto.yml
books/数理统计学导论（Hogg）/book/: _quarto.yml  index.qmd
books/概率论与数理统计（浙大版+宋浩）/book/: _quarto.yml
books/概率论与数理统计（浙大版）/book/: _quarto.yml
books/概率论与统计推断（Hogg）/book/: _quarto.yml  index.qmd
books/概率论与统计推断（Hogg）/dataset/: Hogg_Probability10e_readme.txt
books/程序员数学/book/: _quarto.yml
books/线性代数导论（第5版）/book/: _quarto.yml
books/线性代数的几何意义/book/: _quarto.yml
books/统计推断（Casella）/book/: _quarto.yml
books/高等数学第8版（同济大学数学科学学院）/book/: _quarto.yml
books/麻省理工-18.06-线性代数/book/: _quarto.yml  index.qmd
docs/: maintenance.md
docs/superpowers/specs/: 2026-06-28-pages-number-depth-design.md
(+500 files in other folders)
