[project]
name = "reading-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "ipython>=9.14.1",
    "matplotlib>=3.11.0",
    "nbformat>=5.10.4",
    "plotly>=6.8.0",
    "polars[pandas]>=1.41.2",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
